# CheapFood

./: .gitignore  CLAUDE.md
.claude/: settings.local.json
backend_dart/: pubspec.yaml
backend_dart/lib/: auth_routes.dart  config.dart  cors_middleware.dart  exchange_rate_cache.dart  menu_cache.dart  rate_limiter.dart  restaurant_routes.dart  routes.dart  scrape_deduplicator.dart  scrape_routes.dart  scraper_service.dart  translation_service.dart  user_service.dart
common_dart/: pubspec.yaml
common_dart/lib/: common_dart.dart
common_dart/lib/src/: currencies.dart
common_dart/lib/src/models/: exchange_rates.dart  menu_category.dart  (+7 more)
frontend/: pubspec.yaml
frontend/lib/: config.dart  main.dart
frontend/lib/cubit/: auth_cubit.dart  restaurants_cubit.dart  scrape_cubit.dart  scrape_registry_cubit.dart
frontend/lib/screens/: login_screen.dart  menu_scrape_screen.dart  restaurants_screen.dart
frontend/lib/widgets/: restaurant_card.dart  restaurant_widget.dart
menu_scraper/: .env.example  __main__.py  app.py  config.py  pyproject.toml  scraper.py
menu_scraper/common/: html_extractor.py  image_extractor.py  menu_enhancer.py  menu_filter.py  pdf_extractor.py  restaurant_info_extractor.py  text_extractor.py
menu_scraper/models/: menu.py  requests.py
menu_scraper/parsers/: choiceqr_parser.py  generic_parser.py  pdf_only_parser.py
menu_scraper/processing/: crawler.py  generic_parser.py  html_cleaner.py  html_extractor.py  image_extractor.py  llm_extractor.py  media_handler.py  menu_enhancer.py  menu_filter.py  ocr_stub.py  pdf_extractor.py  prompts.py  restaurant_info_extractor.py  text_extractor.py
menu_scraper/scraper/: crawler.py  scraper.py  site_detector.py
menu_scraper/tests/: scraper_quality.py
menu_scraper/utils/: debug.py  media_handler.py
notes/: scraper.md
(+4 files in other folders)
