[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cheapfood-menu-scraper"
version = "0.1.0"
description = "Microservice that scrapes restaurant menus and returns structured JSON"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28",
    "parsel>=1.9",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
]

[tool.setuptools.packages.find]
where = [".."]
include = ["menu_scraper*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "mypy>=1.14",
    "ruff>=0.9",
]
ocr = [
    "google-generativeai>=0.8",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
