[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "menu-scraper"
version = "0.1.0"
description = "Microservice that scrapes restaurant menus and returns structured JSON"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28",
    "parsel>=1.9",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "google-genai>=1.0",
    "trafilatura",
]

[tool.setuptools.packages.find]
where = [".."]
include = ["menu_scraper*"]

[project.optional-dependencies]
dev = [
    "mypy>=1.14",
    "ruff>=0.9",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py311"
line-length = 100
